# MyBackupCode

./: .gitignore  features.txt
AutoCheck/AutoCheck/: AutoCheck.sln
AutoCheck/AutoCheck/AutoCheck/: AutoCheck.csproj  Form1.Designer.cs  Form1.cs  Program.cs
BindServiceSendImage/: .project  AndroidManifest.xml
BindServiceSendImage/res/layout/: activity_client.xml
BindServiceSendImage/res/menu/: client.xml
BindServiceSendImage/res/values/: strings.xml
CarAssistant/app/: build.gradle
Coursera/Machine_Learning_Foundation/week1/: Getting Started with SFrames.ipynb
Coursera/Machine_Learning_Foundation/week2/: Assignment week 2.ipynb  Predicting house prices.ipynb
Coursera/Machine_Learning_Foundation/week3/: Analyzing product sentiment.ipynb
Coursera/Regression/week02/: week-2-multiple-regression-assignment-1-blank.ipynb  week-2-multiple-regression-assignment-2-blank.ipynb
Coursera/Regression/week03/: .gitignore  week-3-polynomial-regression-assignment-blank.ipynb
Coursera/ml_foundations/: Document retrieval.ipynb
Coursera/ml_foundations/.ipynb_checkpoints/: Document retrieval-checkpoint.ipynb
FacePointExpressionCombine/: CMakeLists.txt  Configuration.cpp  FacialExpression.cpp  FacialExpression.h  FernRegressor.cpp  FernRegressor.h  NormalRegressor.cpp  NormalRegressor.h  ShapeAlignment.cpp  ShapeAlignment.h  main.cpp  utility.cpp  utility.h
FacialExpression/: CMakeLists.txt  FacialExpression.cpp  FacialExpression.h  emotion_output.txt  expressionModel.txt  extract_keypoints_kaggle.py  main.cpp  main_visualizeData.cpp  path_output.txt  result_keypoints.txt  save_result_kaggle_reduce.txt  utility.cpp  utility.h
FacialExpression/Datasets/JAFFE/: listJAFFE.txt
FacialPointDetection/: .gitignore  CMakeLists.txt  Configuration.cpp  Configuration.h  FernRegressor.cpp  FernRegressor.h  NormalRegressor.cpp  NormalRegressor.h  Readme.md  ShapeAlignment.cpp  ShapeAlignment.h  config.txt  config_ibug.txt  config_ibug_reduce.txt  keypoints_reduce.py  main.cpp  main_expression.cpp  main_ibug.cpp  main_test.cpp  main_visualizeExpression.cpp  save_result_kaggle_num_of_refine.txt  save_result_kaggle_reduce.txt  save_result_kaggle_refine.txt  save_result_refine.py  save_result_refine_reduce.py  utility.cpp  utility.h
FacialPointDetection/Datasets/: listJAFFE.txt
FacialPointDetection/Datasets/IBUG/: boundingbox.txt  images.txt  keypoints.txt  keypoints_reduce.txt
FacialPointDetectionv2/: CMakeLists.txt  FaceAlignment.h  Fern.cpp  FernCascade.cpp  FernRegressor.cpp  NormalRegressor.cpp  ShapeAlignment.cpp  ShapeRegressor.cpp  TestDemo.cpp  TrainDemo.cpp  Utils.cpp
FacialPointDetectionv2/FacePoint/: FernRegressor.cpp  FernRegressor.h  NormalRegressor.cpp  ShapeAlignment.cpp
GoogleCloudMessage/GCMDemo/: AndroidManifest.xml
GoogleCloudMessage/Python Server Code/: testCloudMessage.py
MachineLearningOpencv/: CMakeLists.txt  main.cpp
OpenCV_Blueprints_03_OpenCV_3/: CMakeLists.txt  facial_components.cpp  feature_extraction.cpp  train.cpp
OpenCV_Blueprints_04_panorama/Panorama/app/: build.gradle
OpenCV_Blueprints_04_panorama_submit/Panorama/app/: build.gradle
OpenCV_Blueprints_ml_module/: CMakeLists.txt  prepare_dataset.cpp  train.cpp
OpencvPackage/: testOpencv.cpp
OpencvPackage/Multi Face Tracking/: opticalFlow.cpp
SendDataMemoryFile/: .project  AndroidManifest.xml
SendDataMemoryFile/jni/: robotbase_vision_camera_memory_NativeServer.cpp  robotbase_vision_camera_memory_NativeServer.h
SendDataMemoryFile/res/layout/: activity_main.xml
SendDataMemoryFile/res/menu/: main.xml
SendDataMemoryFile/res/values/: strings.xml
SplashScreen/: .cproject  .project  AndroidManifest.xml  Makefile
SplashScreen/jni/apis/: Android.mk
SplashScreen/jni/utils/: Android.mk
SplashScreen/res/values/: strings.xml
Torch/mnist/: train-mnist.lua
Torch/mnist_new/: train.lua
Utility/Photoshop/Scripts/: convert2png.jsx
VehicleDetection/: CMakeLists.txt  average_dimensions.cpp  count_samples.cpp  detect_simple.cpp  detect_test.cpp  folder_listing.cpp  generate_negatives.cpp  precision_recall.cpp
VehicleDetection/1_ITSC2012result_to_annotations/: ITSC2012results.txt  annotations.txt  listImage.py  negatives.txt  parseResult.py  test.py  visualize.py
VehicleTracking/: CMT.cpp  CMakeLists.txt  main.cpp  main_tld.cpp
Vision/: .gitignore
Vision/app/: build.gradle
VisionPackage/: .cproject  .project  AndroidManifest.xml
VisionPackage/jni/: Android.mk  Application.mk  robotbase_vision_NativeAndroidCamera.cpp  robotbase_vision_NativeAndroidCamera.h  robotbase_vision_NativeFaceDetection.cpp  robotbase_vision_NativeFaceDetection.h  robotbase_vision_NativeFaceTracking.cpp  robotbase_vision_NativeFaceTracking.h  robotbase_vision_NativeMotionDetection.cpp  robotbase_vision_NativeMotionDetection.h  robotbase_vision_camera_NativeOpenni2.cpp  robotbase_vision_camera_NativeOpenni2.h  utility.cpp  utility.h
VisionPackage/res/layout/: activity_camera_preview.xml  activity_face_tracking.xml  activity_face_tracking_open_cv.xml  activity_face_tracking_test.xml  activity_facial_learning.xml  activity_gallery_full_screen_image.xml  activity_tracking_tld.xml  activity_vision.xml
VisionPackage/res/menu/: face_tracking.xml  face_tracking_open_cv.xml  face_tracking_test.xml  image_filter.xml  tracking_tld.xml
VisionPackage/res/raw/: vision_tld_parameters.properties
VisionPackage/res/values/: strings.xml
VisionPackage/res/xml/: device_filter.xml  usb2dynamixel.xml
angularjs/contacts/: .gitignore  accounts.js  api.js  bower.json  data.json  package.json  server.js  users.json
angularjs/contacts/public/: login.html  main.html
angularjs/ng-book/01-basic/: app.js  bower.json  main.html
angularjs/ng-book/02-sign-up-form/: app.js  bower.json  main.html
angularjs/ng-book/03-custom-directive/: app.js  bower.json  main.html
angularjs/ng-book/06-route-view/: bower.json  main.html
angularjs/playbyplay/: README.md  bower.json  package.json
nodejs/01_hello_world/: package.json
nodejs/BookAPI/: app.js  gulpfile.js  package.json
nodejs/BookAPI/Routes/: bookRoutes.js
(+242 files in other folders)
